@@ -11,6 +11,7 @@
 ### Bugfixes
 * Fixed memory hooks for Cuda 11.5
 * Fixed memory type cache merge
+* Fixed continuously triggering wakeup fd when keepalive is used
 
 ## 1.12.0 (January 12, 2022)
 ### Features:
